Background on brighter-fatter

--- a/introduction.tex
+++ b/introduction.tex
@@ -19,6 +19,8 @@ int main(int argc, char** argv) {
 
 \section{Background}
 
+Sources: Dark Energy Task Force Report (Albrecht et. al)
+
 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
 eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
 minim veniam, quis nostrud exercitation ullamco laboris nisi ut
