Back to work on GMMs

--- a/thesis.tex
+++ b/thesis.tex
@@ -25,6 +25,7 @@
 \usepackage{subcaption}  % \begin{subfigure}...\end{subfigure} within figure
 \usepackage{multirow}
 \usepackage{tabularx}
+\usepackage{booktabs}
 
 % Uncomment the following to attempt to enforce Type 1 or TrueType 
 % fonts. ProQuest does not want the type 3 fonts used by default as
